--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<html>
+  <title>My Website</title>
+  <body><h1> My Personal Website</h1></body>
+  <style>
+  body{
+    background-color:green;
+    color:#fff;
+    text-align:center;
+    }
+  </style>
+</html>
